fixed spacing

--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -1,13 +1,14 @@
 .projects{
-    margin: 200px auto;
+    margin: 150px auto;
     animation: fadein 2s;
 }
 .projects p{
-    font-size: 1.5em;
+    font-size: 1.3em;
     line-height: 40px;
 }
 .project-card-container{
     margin: auto;
+    margin-top: 100px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
